Display pathbar gap also on front page.

--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -75,7 +75,12 @@ $pathbar-font-weight: normal !default;
   }
 }
 
-body.portaltype-plone-site #breadcrumbs-wrapper {
-    display:none;
+body.portaltype-plone-site {
+  #breadcrumbs-wrapper {
+    margin-bottom: 0;
+    #portal-breadcrumbs {
+      display:none;
+    }
+  }
 }
 
