--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -1,4 +1,4 @@
-$pathbar-bg-color: $gray-light !default;
+$pathbar-bg-color: $gray-lighter !default;
 $pathbar-arrow-color: #fff !default;
 $pathbar-text-color: $text-color !default;
 $pathbar-font-weight: normal !default;
@@ -10,7 +10,7 @@ $pathbar-font-weight: normal !default;
 
 #breadcrumbs-wrapper {
   margin-bottom: 2em;
-  margin-top: 2em;
+  margin-top: 1em;
 
   #portal-breadcrumbs {
     width: 100%;
