Fix logo margin to portal top row

--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -43,14 +43,9 @@ body {
     width: 100%;
   }
 
-  .topRow {
-    margin: 1.5em 0;
-  }
-
   #portal-logo {
     display: inline-block;
-    margin: 0;
-    margin-bottom: 1.5em;
+    margin: 2em 0 2em 0;
   }
 }
 
