--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -35,7 +35,6 @@ body {
 
 
 #header {
-  margin-bottom: 1.4em;
 
   >.row >.cell {
     /* Remove paddings since we have no background color. */
@@ -52,9 +51,64 @@ body {
 
 #columns {
   background-color: $content-bg-color;
+  padding-top: 1em;
+
+  @include screen-large {
+    margin-top: 1.4em;
+  }
 }
 
 
 #content {
   clear: both;
 }
+
+#column-content {
+  @include cell();
+  @include position0();
+  @include width(16);
+
+  @include screen-small {
+    @include position(0);
+    @include width(16);
+  }
+
+  @include screen-medium {
+    @include position(0);
+    @include width(10);
+  }
+
+  @include screen-large {
+    @include position(4);
+    @include width(8);
+  }
+
+}
+
+#column-sidebar {
+  clear: both;
+
+  @include screen-medium {
+    @include position(10);
+    @include width(6);
+    @include cell();
+  }
+
+  @include screen-large {
+    @include position(12);
+    @include width(4);
+  }
+}
+
+#column-navigation {
+  display: none;
+  @include cell();
+
+  @include screen-large {
+    display:block;
+    @include position(0);
+    @include width(4);
+
+  }
+}
+
