--- a/plonetheme/onegovbear/theme/scss/globalnav.scss
+++ b/plonetheme/onegovbear/theme/scss/globalnav.scss
@@ -18,6 +18,7 @@ $globalnav-link-font-weight: normal !default;
   globalnav-font-size);
 
 #portal-globalnav-wrapper {
+  display: none;
   margin-right: 315px;
   @include noselect();
   #portal-globalnav {
@@ -51,5 +52,8 @@ $globalnav-link-font-weight: normal !default;
         }
       }
     }
+  }
+  @include screen-large {
+    display: block;
   }
 }
