Mainly fix use of "transparentize".

--- a/plonetheme/onegovbear/theme/scss/datagridwidget.scss
+++ b/plonetheme/onegovbear/theme/scss/datagridwidget.scss
@@ -29,7 +29,7 @@ table.datagridwidget-table-view {
         .querySelectSearch {
             input[type="text"] {
                 width: 70%;
-            },
+            }
             .searchButton {
                 width: 27%;
                 margin:0;
