--- a/plonetheme/onegovbear/theme/scss/form.scss
+++ b/plonetheme/onegovbear/theme/scss/form.scss
@@ -3,8 +3,8 @@ $input-bg-color: #fafafa !default;
 $input-border-color: darken($input-bg-color, 20%) !default;
 $input-focus-color: $outline-color !default;
 $input-required-color: change-color($danger-color, $saturation: 90%) !default;
-$input-error-bg-color: transparentize($danger-color, 85%) !default;
-$input-error-border-color: transparentize($danger-color, 50%) !default;
+$input-error-bg-color: transparentize($danger-color, .85) !default;
+$input-error-border-color: transparentize($danger-color, .5) !default;
 
 @include declare-variables(
   formtabs-border-color,
@@ -33,8 +33,8 @@ $input-error-border-color: transparentize($danger-color, 50%) !default;
 
   &:focus {
     border: 1px solid $input-focus-color;
-    @include boxshadow(0 1px 1px transparentize($input-focus-color, 0.8) inset,
-                       0 0 5px transparentize($input-focus-color, 0.6));
+    @include boxshadow(0 1px 1px transparentize($input-focus-color, .8) inset,
+                       0 0 5px transparentize($input-focus-color, .6));
   }
 }
 
@@ -49,8 +49,8 @@ $input-error-border-color: transparentize($danger-color, 50%) !default;
     height: 5px;
     background-color: $input-required-color;
     @include borderradius(2px);
-    @include boxshadow(0 0 1px darken($input-required-color, 20%) inset,
-                       0 0 1px lighten($input-required-color, 10%));
+    @include boxshadow(0 0 1px darken($input-required-color, .2) inset,
+                       0 0 1px lighten($input-required-color, .1));
   }
 }
 
@@ -62,8 +62,8 @@ $input-error-border-color: transparentize($danger-color, 50%) !default;
     margin-left: -0.72em;
     margin-right: -0.72em;
     padding: 0.6em;
-    @include boxshadow(0 0 5px transparentize($input-error-border-color, 0.3) inset,
-                       0 0 8px transparentize($input-error-border-color, 0.2));
+    @include boxshadow(0 0 5px transparentize($input-error-border-color, .3) inset,
+                       0 0 8px transparentize($input-error-border-color, .2));
     .fieldErrorBox {
       color: darken($danger-color, 20%);
       padding-bottom: 0.5em;
