--- a/plonetheme/onegovbear/theme/scss/messages.scss
+++ b/plonetheme/onegovbear/theme/scss/messages.scss
@@ -16,7 +16,7 @@ $portalmessage-border-color: #ccc !default;
 
 
 @mixin portal-message-dt($portalmessage-dt-color, $typeclass:null) {
-  &.$typeclass dt {
+  &.#{$typeclass} dt {
     background-color: $portalmessage-dt-color;
     border: 1px solid darken($portalmessage-dt-color, 15%);
     color: contrast($portalmessage-dt-color,
