Add Safari < 7.1 and IE10 support for the rotated external link marker icon.

--- a/plonetheme/onegovbear/theme/scss/iconset.scss
+++ b/plonetheme/onegovbear/theme/scss/iconset.scss
@@ -55,6 +55,8 @@
     &:after {
       @extend .fa-arrow-up:before;
       transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
     }
   }
 }
