--- a/plonetheme/onegovbear/theme/scss/additionallogo.scss
+++ b/plonetheme/onegovbear/theme/scss/additionallogo.scss
@@ -1,3 +1,28 @@
 #additional-logo {
-    float:right;
+  right: 0;
+  float:right;
+  position: absolute;
+  margin-top: 1em;
+  top: 50px;
+
+  img {
+    height: 50px;
+    width: auto;
+
+    @include screen-small {
+      height: auto;
+      width: auto;
+    }
+  }
+
+  @include screen-small {
+    position: relative;
+    top:0;
+    margin-top: 0;
+  }
+
+  @include screen-medium {
+    margin: 2em 0 2em 0;
+    position: relative;
+  }
 }
