--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -5,15 +5,15 @@ $portal-top-bg-color: $page-bg-color !default;
 
 
 #portal-top {
-  height: 0;
+  padding: 0;
 
-  @include screen-medium {
-    height: auto;
+  @include screen-large {
+    padding: 0.25em 0;
   }
+
   background-color: $portal-top-bg-color;
   max-width: $page-wrapper-width;
   margin: 0 auto;
-  padding: 0.25em 0;
   position: relative;
   font-size: $font-size-small;
   @include clearfix();
