Login overlay displays scrollbar.
Make overlay auto height.
Center the overlay with fixed width.

--- a/plonetheme/onegovbear/theme/scss/login.scss
+++ b/plonetheme/onegovbear/theme/scss/login.scss
@@ -1,10 +1,11 @@
 .overlay-login {
   width: 600px !important;
-  height: 320px !important;
-  left: 50% !important;
-  margin-left: -300px;
-  top: 50% !important;
-  margin-top: -280px;
+  left: 0 !important;
+  right: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  top: 100px !important;
+  bottom: auto !important;
 }
 
 #login-form {
