Logo takes fullwidth in header.
Use float instead of tablelayout to get rid of the full width for logo
in the header.

--- a/plonetheme/onegovbear/theme/scss/additionallogo.scss
+++ b/plonetheme/onegovbear/theme/scss/additionallogo.scss
@@ -1,8 +1,6 @@
 #additional-logo {
 
-  vertical-align: top;
-  text-align: right;
-  display: table-cell;
+  float: right;
 
   img {
     max-height: 50px;
