Add margin-left to the anonymous user actions.

--- a/plonetheme/onegovbear/theme/scss/actions.scss
+++ b/plonetheme/onegovbear/theme/scss/actions.scss
@@ -9,6 +9,7 @@
   /* Anonymous: list actions by floating */
   > ul {
     @include ul(inline);
+    margin-left: 1em;
     li {
       @include linklist;
     }
