fix margin right of external links.

--- a/plonetheme/onegovbear/theme/scss/iconset.scss
+++ b/plonetheme/onegovbear/theme/scss/iconset.scss
@@ -57,6 +57,7 @@
       transform: rotate(45deg);
       -ms-transform: rotate(45deg);
       -webkit-transform: rotate(45deg);
+      margin-right: -0.35em;
     }
   }
 }
