--- a/plonetheme/onegovbear/theme/scss/overlays.scss
+++ b/plonetheme/onegovbear/theme/scss/overlays.scss
@@ -13,6 +13,9 @@ $overlay-close-mask-color: transparentize($gray-light, .2) !default;
   overlay-close-hover-bg-color,
   overlay-close-mask-color);
 
+.overlay-open {
+  body { overflow: hidden; };
+}
 
 #cboxOverlay,
 #exposeMask,
@@ -123,4 +126,22 @@ $overlay-close-mask-color: transparentize($gray-light, .2) !default;
 
 #exposeMask + .contenttreeWindow + .contenttreeWindowBlocker {
   z-index: 1000 !important;
+}
+
+.overlay-login {
+  width: 600px !important;
+  height: 320px !important;
+  left: 50% !important;
+  margin-left: -300px;
+  top: 50% !important;
+  margin-top: -280px;
+}
+
+.overlay-delete {
+  width: 600px !important;
+  height: 320px !important;
+  left: 50% !important;
+  margin-left: -300px;
+  top: 50% !important;
+  margin-top: -280px;
 }
