Formactions not clickable with huge forms.
Make formactions sticky on overlaybottom.
Use borderbox model for all input types for preventing horizontal
overflow.

--- a/plonetheme/onegovbear/theme/scss/form.scss
+++ b/plonetheme/onegovbear/theme/scss/form.scss
@@ -25,6 +25,7 @@ $input-error-border-color: transparentize($danger-color, .5) !default;
   padding: 0.5em;
   width: 20em;
   outline: none;
+  box-sizing: border-box;
 
   border: 1px solid $input-border-color;
   @include borderradius();
