--- a/plonetheme/onegovbear/theme/scss/plonebrowser.scss
+++ b/plonetheme/onegovbear/theme/scss/plonebrowser.scss
@@ -56,6 +56,7 @@
   input[type="text"] {
     box-sizing: border-box;
     height: 40px !important;
+    line-height: 2em;
   }
   textarea {
     box-sizing: border-box;
