Fix display issues of html-source editor.

--- a/plonetheme/onegovbear/theme/scss/plonebrowser.scss
+++ b/plonetheme/onegovbear/theme/scss/plonebrowser.scss
@@ -10,6 +10,10 @@
     width: 100% !important;
     height: 100% !important;
     margin-left: -5px;
+
+    &[src$="source_editor.htm"] {
+      height: 80% !important;
+    }
   }
   .mceMiddle span {
     left: 0;
